--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.15.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,14 +17,17 @@
     "lodash": "^4.17.21",
     "owl.carousel": "^2.3.4",
     "react": "^18.1.0",
+    "react-datepicker": "^6.5.0",
     "react-dom": "^18.1.0",
     "react-fontawesome": "^1.7.1",
     "react-image-magnify": "^2.1.1",
     "react-loader-spinner": "^6.1.6",
     "react-owl-carousel": "^2.3.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "6.21.3",
     "react-scripts": "^5.0.1",
     "react-slick": "0.30.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
     "react-transition-group": "^4.4.5",
     "react-use-cart": "^1.13.0",
